--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "scripts": {
     "build": "ember build",
     "start": "ember server",
-    "test": "ember test"
+    "test": "ember test",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 0.10.0",
+    "yarn": ">= 1.0.0"
   },
   "author": "",
   "license": "MIT",
@@ -51,7 +53,7 @@
     "ember-svg-jar": "0.10.3",
     "ember-tether": "0.3.1",
     "ember-tooltips": "2.4.1",
-    "ember-truth-helpers": "1.2.0",
+    "ember-truth-helpers": "1.3.0",
     "emberx-file-input": "1.1.2",
     "eonasdan-bootstrap-datetimepicker-npm": "4.17.37",
     "gpx-parse": "^0.10.4",
@@ -62,5 +64,16 @@
     "turf-difference": "^3.0.12",
     "turf-polygon": "^1.0.3",
     "xml2js": "^0.4.17"
+  },
+  "dependencies": {
+    "@bower_components/Leaflet.MultiOptionsPolyline": "mjanda/Leaflet.MultiOptionsPolyline#master",
+    "@bower_components/bootstrap": "twbs/bootstrap#~3.3.5",
+    "@bower_components/ember": "components/ember#~2.5.0",
+    "@bower_components/ember-cli-shims": "ember-cli/ember-cli-shims#0.1.1",
+    "@bower_components/ember-cli-test-loader": "ember-cli/ember-cli-test-loader#0.2.2",
+    "@bower_components/ember-qunit-notifications": "dockyard/ember-qunit-notifications#0.1.0",
+    "@bower_components/jquery": "jquery/jquery-dist#>= 1.7.0 < 3.0.0",
+    "@bower_components/leaflet": "Leaflet/Leaflet#~1.1.0",
+    "@bower_components/qunit-notifications": "dockyard/qunit-notifications#~0.1.0"
   }
 }
